[package]
name = "rusgam"
version = "0.1.0"
authors = ["Fil Krynicki <filipkrynicki@gmail.com>"]
edition = "2018"

[dependencies]
windows = "0.19.0"
nalgebra-glm = { version = "0.5.0" }
arrayvec = { version = "0.5.1" }
tinytga = { version = "0.2.0" }
tobj = { version = "0.1.11" }
bitflags = { version = "1.2.1" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.44" }
imgui = { version = "0.3.0" }
gltf = "0.15.2"
winbindings = { path = "winbindings" }